<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ezz.bakeappudacity.steps.ui.fragments.StepsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/ingredient_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingredients"
            android:textAllCaps="false" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>
