<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ezz.bakeappudacity.steps.ui.fragments.StepDetailsFragment">


    <android.support.v4.view.ViewPager
        android:id="@+id/steps_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v4.view.ViewPager>

</FrameLayout>
