...
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/instructions"/>

        <TextView
            android:id="@+id/step_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="15sp"/>


...
